# Deploy

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
mysite/: db.sqlite3
mysite/blogapp/: urls.py
mysite/myauth/: urls.py
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: forms.py  serializers.py  urls.py  views.py
mysite/shopapp/templates/shopapp/: order_list.html
